--- a/index.html
+++ b/index.html
@@ -2,16 +2,92 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Together We Fight</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
+    <!-- Banner -->
+    <div class="banner-container">
+        <div class="banner-text">
+            <h1 class="banner-title">
+                Let's Help Those Who Are <br /> More In Need
+            </h1>
+            <p class="paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipisicinga dipisicing elit.
+                <br /> omnis nesciunt aliquam autem magnam dolore hic dolores ullam minus
+                <br /> repudiandaes.
+            </p>
+            <button class="donate-btn">Donate Now</button>
+        </div>
+    </div>
 
-    <h1>Human For Humanity</h <h2>Donate</h2>
+    <!-- 2nd -->
+    <div class="donate-section">
+        <h1>Donate Today</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quasi, nihil delectus provident temporibus cumque repellendus ducimus velit laboriosam odio obcaecati perferendis distinctio quia possimus?
+        </p>
 
+        <div class="donate-amount">
+            <div class="amount">
+                <h1>100tk</h1>
+            </div>
+            <div class="amount selected">
+                <h1>200tk</h1>
+            </div>
+            <div class="amount">
+                <h1>500tk</h1>
+            </div>
+            <div class="amount">
+                <h1>1000tk</h1>
+            </div>
+            <div class="amount">
+                <h1>5000tk</h1>
+            </div>
+        </div>
+        <input class="custom-amount" type="number" placeholder="Other Amount (Taka)" />
+        <br />
+        <button class="donate-btn">Donate Now</button>
+    </div>
+    <!-- 2nd -->
+    <div class="donate-section">
+        <h1>Our Donate Plan</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quasi, nihil delectus provident temporibus cumque repellendus ducimus velit laboriosam odio obcaecati perferendis distinctio quia possimus?
+        </p>
+
+        <div class="donate-process">
+            <div class="item">
+                <img src="/icon/food.png" alt="" />
+                <h1>Food for a family</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores quae doloribus eos autem aperiam mollitia dolores quidem non, provident eveniet, nihil voluptatum?
+                </p>
+            </div>
+            <div class="item2">
+                <img src="/icon/shelter.png" alt="" />
+                <h1>Shelter for a family</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores quae doloribus eos autem aperiam mollitia dolores quidem non, provident eveniet, nihil voluptatum?
+                </p>
+            </div>
+            <div class="item3">
+                <img src="/icon/Frame-1.png" alt="" />
+                <h1>Education for a child</h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores quae doloribus eos autem aperiam mollitia dolores quidem non, provident eveniet, nihil voluptatum?
+                </p>
+            </div>
+        </div>
+
+        <input class="custom-amount" type="number" placeholder="Other Amount (Taka)" />
+        <br />
+        <button class="donate-btn">Donate Now</button>
+    </div>
 </body>
 
 </html>
