all section complete

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
                 Let's Help Those Who Are <br /> More In Need
             </h1>
             <p class="paragraph">
-                Lorem ipsum dolor sit amet, consectetur adipisicinga dipisicing elit.
-                <br /> omnis nesciunt aliquam autem magnam dolore hic dolores ullam minus
-                <br /> repudiandaes.
+                Floods leave one third of Bangladesh underwater and displace more than 1.5 million people
+                <br /> Help the needy people. Make big changes & help the world
             </p>
             <button class="donate-btn">Donate Now</button>
         </div>
@@ -53,7 +52,9 @@
         <br />
         <button class="donate-btn">Donate Now</button>
     </div>
-    <!-- 2nd -->
+
+    <!-- 3rd -->
+
     <div class="donate-section">
         <h1>Our Donate Plan</h1>
         <p>
@@ -83,11 +84,70 @@
                 </p>
             </div>
         </div>
-
-        <input class="custom-amount" type="number" placeholder="Other Amount (Taka)" />
-        <br />
-        <button class="donate-btn">Donate Now</button>
     </div>
+
+    <!-- Blog Section -->
+
+    <div class="Blog-section">
+        <div class="blog-content">
+            <h1 class="blog-content-head">
+                Their lives depend on<br />your donation
+            </h1>
+            <p class="text-content">
+                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim
+            </p>
+            <p class="text-content">
+                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim
+            </p>
+
+            <button class="donate-btn">How to contribute?</button>
+        </div>
+
+        <div class="image">
+            <img height="300px" src="/images/donation11.jpg" alt="Blog1-img" />
+        </div>
+    </div>
+
+    <!--Blog Section2-->
+
+    <div class="Blog-section">
+        <div>
+            <img height="300px" src="/images/donation11.jpg" alt="Blog1-img" />
+        </div>
+
+        <div class="blog-content">
+            <h1 class="blog-content-head">
+                Their lives depend on<br />your donation
+            </h1>
+            <p class="text-content">
+                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim
+            </p>
+            <p class="text-content">
+                Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim
+            </p>
+
+            <button class="donate-btn">How to contribute?</button>
+        </div>
+    </div>
+
+    <!--Subscribe Section-->
+
+    <div class="newsletter-section">
+        <h1>Get My Updates</h1>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga sit voluptatum corrupti aut ducimus asperiores aperiam facere officia placeat eum tempore, molestiae dolore consequatur doloribus quas. Eos iure et placeat?
+        </p>
+
+        <div class="input_div">
+            <input type="email" class="input_email" placeholder="Email">
+            <button class="donate-btn">Subscribe</button>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <h2>Be Humble</h2>
+        <p>I am gonna do it</p>
+    </footer>
 </body>
 
 </html>
