--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
 
         <div class="image">
-            <img height="300px" src="/images/donation11.jpg" alt="Blog1-img" />
+            <img height="300px" src="./images/donation11.jpg" alt="Blog1-img" />
         </div>
     </div>
 
@@ -112,7 +112,7 @@
 
     <div class="Blog-section">
         <div>
-            <img height="300px" src="/images/donation11.jpg" alt="Blog1-img" />
+            <img height="300px" src="./images/donation11.jpg" alt="Blog1-img" />
         </div>
 
         <div class="blog-content">
