new image added

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     <div class="Blog-section">
         <div>
-            <img height="300px" src="images/donation11.jpg" alt="Blog1-img" />
+            <img height="300px" width="80%" src="images/donation5.jpg" alt="Blog1-img" />
         </div>
 
         <div class="blog-content">
